@@ -1,5 +1,13 @@
 2008-01-30  Tambet Ingo  <tambet@gmail.com>
 
+	Sort wireless networks in the list.
+
+	* editor/editor-app.c (sort_networks): Implement.
+	(setup_dialog): Add sort function to the list store.
+	(populate_model): Sort the model.
+
+2008-01-30  Tambet Ingo  <tambet@gmail.com>
+
 	Implement wireless network editor.
 
 	* Makefile.am: Add editor to build.
